PivotGrid: Fix sorting icon is positioned incorrectly when header text was wrapped to the next line (T878428) (#12710)

--- a/styles/widgets/common/pivotGrid.less
+++ b/styles/widgets/common/pivotGrid.less
@@ -179,6 +179,12 @@
 
             > span {
                 white-space: normal;
+            }
+        }
+
+        .dx-pivotgrid-collapsed,
+        .dx-pivotgrid-expanded {
+            > span {
                 display: inline-flex;
             }
         }
